# pyskl

./: .gitignore  main.py  pyproject.toml  requirements.txt  run.sh
.claude/: settings.local.json
configs/block_stgcn/block_stgcn_ntu60_xsub_3dkp/: j.py
configs/posedrop/pose_transformer_ntu60_xsub_hrnet/: j.py
configs/skel_transformer/skel_transformer_mae_ntu60/: pretrain.py
configs/skel_transformer/skel_transformer_ntu120_xsub_hrnet/: j.py
configs/skel_transformer/skel_transformer_ntu60_xsub_3dkp/: j.py
configs/skel_transformer/skel_transformer_ntu60_xsub_hrnet/: j.py
configs/skel_transformer/skel_transformer_ntu60_xview_3dkp/: j.py
configs/stgcn++/stgcn++_ntu60_xview_3dkp/: j.py
configs/stgcn++att/stgcn++att_ntu60_xview_3dkp/: j.py
pyskl/apis/: train.py
pyskl/core/: evaluation.py
pyskl/datasets/: builder.py
pyskl/datasets/pipelines/: pose_related.py
pyskl/models/gcns/: __init__.py  block_stgcn.py  stgcn.py
pyskl/models/gcns/utils/: __init__.py  gcn.py  tcn.py
pyskl/models/heads/: __init__.py  base.py  mae_head.py  simple_head.py
pyskl/models/losses/: cross_entropy_loss.py
pyskl/models/recognizers/: __init__.py  recognizergcn.py  skeleton_mae.py
pyskl/models/transformers/: __init__.py  attention.py  pose_transformer.py  skeleton_transformer.py
tools/: test.py  train.py  visualize_attention.py
tools/data/: download_nturgbd.sh
